--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "crypto-trading-simulator-v2-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
